--- a/.github/workflows/deploy-wasm-pages.yml
+++ b/.github/workflows/deploy-wasm-pages.yml
@@ -32,6 +32,7 @@ jobs:
           mkdir './artifact'
           cp './repository/index.html' './artifact/'
           cp './repository/mq_js_bundle.js' './artifact/'
+          ls -lR './repository/target'
           cp "./repository/target/wasm32-unknown-unknown/release/*.wasm" './artifact/'
 
       - name: Configure Pages
