--- a/.github/workflows/deploy-wasm-pages.yml
+++ b/.github/workflows/deploy-wasm-pages.yml
@@ -32,8 +32,7 @@ jobs:
           mkdir './artifact'
           cp './repository/index.html' './artifact/'
           cp './repository/mq_js_bundle.js' './artifact/'
-          ls -l './repository/target/wasm32-unknown-unknown/release/'
-          cp "./repository/target/wasm32-unknown-unknown/release/*.wasm" './artifact/'
+          cp './repository/target/wasm32-unknown-unknown/release/orbital.wasm' './artifact/'
 
       - name: Configure Pages
         uses: actions/configure-pages@v5
